--- a/app/src/main/res/layout/shopping_cart_item.xml
+++ b/app/src/main/res/layout/shopping_cart_item.xml
@@ -6,6 +6,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        android:layout_margin="8dp"
+        android:background="@android:drawable/screen_background_light_transparent"
         android:orientation="horizontal">
 
         <ImageView
@@ -34,40 +36,44 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <EditText
-                        android:inputType="numberDecimal"
                         android:id="@+id/etCartItemCount"
                         style="@style/input_obj"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
                         android:text="24.23" />
 
                     <Button
                         android:id="@+id/btnCartItemUpdate"
+                        style="@style/button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@color/info"
                         android:text="@string/update" />
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/tvCartPriceNTotal"
-                    android:layout_weight="1"
                     style="@style/input_pre"
-                    android:text="134.22 ₺ \n (12.24 ₺)"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="134.22 ₺ \n (12.24 ₺)" />
             </LinearLayout>
         </LinearLayout>
 
         <Button
             android:id="@+id/btnCartItemAction"
+            style="@style/button"
             android:layout_width="80dp"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@color/danger" />
     </LinearLayout>
 
 </LinearLayout>
