--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#E68A00</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="textBackground">#90FFFFFF</color>
-    <color name="colorHR">#00FFFF</color>
+    <color name="colorHR">#95ff9933</color>
 
+<color name="info">#6699ff</color>
+    <color name="primary">#e68a00</color>
+    <color name="danger">#ff5050</color>
+    <color name="set">#33cc33</color>
 </resources>
