--- a/app/src/main/res/layout/order.xml
+++ b/app/src/main/res/layout/order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -21,7 +22,10 @@
             style="@style/input_pre"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginRight="16dp"
             android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@id/orderOrderAmound"
+
             android:text="Kargoda"
             android:textSize="18sp" />
 
@@ -30,15 +34,38 @@
             style="@style/input_pre"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_toLeftOf="@id/btnShowOrderItem"
+            android:layout_toLeftOf="@id/btnSetStatue"
             android:text="1234.55 ₺"
             android:textSize="18sp" />
 
-        <Button
+        <ImageView
+            android:id="@+id/btnSetStatue"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/btnShowOrderUserInfo"
+            android:background="@color/set"
+            android:scaleType="centerInside"
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/btn_radio" />
+
+        <ImageView
+            android:id="@+id/btnShowOrderUserInfo"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/btnShowOrderItem"
+            android:background="@color/info"
+            android:scaleType="centerInside"
+            android:visibility="gone"
+            app:srcCompat="@android:drawable/ic_menu_info_details" />
+
+        <ImageView
             android:id="@+id/btnShowOrderItem"
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:background="@android:drawable/screen_background_dark_transparent"
+            android:scaleType="centerInside"
+            app:srcCompat="@android:drawable/arrow_down_float" />
     </RelativeLayout>
 
     <ScrollView
