--- a/app/src/main/res/menu/activity_main_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_main_menu_drawer.xml
@@ -4,7 +4,7 @@
     tools:showIn="navigation_view">
     <item
         android:id="@+id/nav_cart"
-        android:icon="@drawable/ic_menu_camera"
+        android:icon="@mipmap/icon_cart"
         android:title="@string/null_cart" />
 
     <group
@@ -12,19 +12,19 @@
        >
         <item
             android:id="@+id/nav_admin"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@mipmap/icon_admin"
             android:title="@string/admin_page" />
         <item
             android:id="@+id/nav_orders"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@mipmap/icon_orders"
             android:title="@string/my_orders" />
         <item
             android:id="@+id/nav_account"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@mipmap/icon_person"
             android:title="@string/my_account" />
         <item
             android:id="@+id/nav_exit"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@mipmap/logout"
             android:title="@string/exit" />
     </group>
 
@@ -33,15 +33,15 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_register"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@mipmap/icon_person"
             android:title="@string/register" />
         <item
             android:id="@+id/nav_login"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@mipmap/icon_person"
             android:title="@string/login" />
         <item
             android:id="@+id/nav_forgot_password"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@mipmap/icon_person"
             android:title="@string/forgot_password" />
     </group>
 </menu>
