--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,9 @@
     </style>
 
     <style name="button">
-
+        <item name="android:background">@drawable/ripple</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
