--- a/app/src/main/res/layout/content_login_or_register.xml
+++ b/app/src/main/res/layout/content_login_or_register.xml
@@ -114,6 +114,7 @@
             android:layout_height="wrap_content"
             android:onClick="sendNewPassword"
             android:text="@string/send_new_password" />
+
         <TextView
             style="@style/input_pre"
             android:layout_width="wrap_content"
@@ -206,129 +207,139 @@
         android:orientation="vertical"
         android:visibility="invisible">
 
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pre_register_name" />
-
-        <EditText
-            android:id="@+id/etRegisterName"
-            style="@style/input_obj"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_register_name"
-            android:inputType="text" />
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pre_register_name" />
+
+                <EditText
+                    android:id="@+id/etRegisterName"
+                    style="@style/input_obj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_register_name"
+                    android:inputType="text" />
 
 
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pre_register_surname" />
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pre_register_surname" />
 
-        <EditText
-            android:id="@+id/etRegisterSurName"
-            style="@style/input_obj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_register_surname"
-            android:inputType="text" />
+                <EditText
+                    android:id="@+id/etRegisterSurName"
+                    style="@style/input_obj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_register_surname"
+                    android:inputType="text" />
 
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pre_register_email" />
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pre_register_email" />
 
-        <EditText
-            android:id="@+id/etRegisterEmail"
-            style="@style/input_obj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_register_email"
-            android:inputType="textEmailAddress" />
+                <EditText
+                    android:id="@+id/etRegisterEmail"
+                    style="@style/input_obj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_register_email"
+                    android:inputType="textEmailAddress" />
 
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pre_register_password" />
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pre_register_password" />
 
-        <EditText
-            android:id="@+id/etRegisterPassword"
-            style="@style/input_obj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_register_password"
-            android:inputType="textPassword" />
+                <EditText
+                    android:id="@+id/etRegisterPassword"
+                    style="@style/input_obj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_register_password"
+                    android:inputType="textPassword" />
 
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pre_register_password_repeat" />
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pre_register_password_repeat" />
 
-        <EditText
-            android:id="@+id/etRegisterPasswordRepeat"
-            style="@style/input_obj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_register_password_repeat"
-            android:inputType="textPassword" />
-
-
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pre_register_phone" />
-
-        <EditText
-            android:id="@+id/etRegisterPhone"
-            style="@style/input_obj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_register_phone"
-            android:inputType="phone" />
+                <EditText
+                    android:id="@+id/etRegisterPasswordRepeat"
+                    style="@style/input_obj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_register_password_repeat"
+                    android:inputType="textPassword" />
 
 
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pre_register_address" />
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pre_register_phone" />
 
-        <EditText
-            android:id="@+id/etRegisterAddress"
-            style="@style/input_obj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_register_address"
-            android:inputType="text" />
+                <EditText
+                    android:id="@+id/etRegisterPhone"
+                    style="@style/input_obj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_register_phone"
+                    android:inputType="phone" />
 
-        <Button
-            style="@style/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="register"
-            android:text="@string/register" />
 
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="forgotPassword"
-            android:text="@string/forgot_password" />
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pre_register_address" />
 
-        <TextView
-            style="@style/input_pre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="alreadyMember"
-            android:text="@string/already_member"
-            android:textSize="16sp" />
+                <EditText
+                    android:id="@+id/etRegisterAddress"
+                    style="@style/input_obj"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_register_address"
+                    android:inputType="text" />
 
+                <Button
+                    style="@style/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="register"
+                    android:text="@string/register" />
+
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="forgotPassword"
+                    android:text="@string/forgot_password" />
+
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="alreadyMember"
+                    android:text="@string/already_member"
+                    android:textSize="16sp" />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 
